syntax = "proto3";
package clan.alloc.v1beta1;

import "gogoproto/gogo.proto";
import "clan/alloc/v1beta1/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/ClanNetwork/clan-network/x/alloc/types";

// GenesisState defines the alloc module's genesis state.
message GenesisState {
  // this line is used by starport scaffolding # genesis/proto/state
  Params params = 1 [ (gogoproto.nullable) = false ];
}
