syntax = "proto3";
package clan.mint.v1beta1;

option go_package = "github.com/ClanNetwork/clan-network/x/mint/types";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

// Minter represents the minting state.
message Minter {
  // current annual expected provisions
  string annual_provisions = 1 [
    (gogoproto.moretags) = "yaml:\"annual_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// Params holds parameters for the mint module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // type of coin to mint
  string mint_denom = 1;
  // the time the chain starts
  google.protobuf.Timestamp start_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  // initial annual provisions
  string initial_annual_provisions = 3 [
    (gogoproto.moretags) = "yaml:\"initial_annual_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // factor to reduce inflation by each year
  string reduction_factor = 4 [
    (gogoproto.moretags) = "yaml:\"reduction_factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // expected blocks per year
  uint64 blocks_per_year = 5
      [ (gogoproto.moretags) = "yaml:\"blocks_per_year\"" ];
}
